# AI-Meetings-Notes-Summariser

./: README.md
ai-meeting-notes-summarizer/ai-meeting-notes-summarizer/: ai_service.py  app.py  email_service.py  models.py  pyproject.toml  routes.py  run.py
ai-meeting-notes-summarizer/ai-meeting-notes-summarizer/static/js/: main.js
ai-meeting-notes-summarizer/ai-meeting-notes-summarizer/templates/: index.html
